--- a/Blueberry/app/src/main/res/values/styles.xml
+++ b/Blueberry/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
@@ -14,6 +14,7 @@
     <style name="TextViewStyle" parent="AppTheme">
         <item name="android:textSize">20dp</item>
         <item name="android:layout_margin">5dp</item>
+        <item name="android:fontFamily">@font/nanumsquare</item>
         <item name="color">@color/colorBlueBerry</item>
     </style>
 
@@ -21,19 +22,22 @@
     <style name="InfoStyle" parent="TextViewStyle">
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
+        <item name="android:fontFamily">@font/nanumsquare</item>
         <item name="android:textColor">@color/colorBlueBerry</item>
     </style>
 
 
     <style name="TextViewSmallStyle" parent="AppTheme">
-        <item name="android:textSize">13dp</item>
+        <item name="android:textSize">15dp</item>
         <item name="android:layout_margin">5dp</item>
+        <item name="android:fontFamily">@font/nanumsquare</item>
         <item name="color">@color/colorBlueBerry</item>
     </style>
 
     <style name="ButtonStyle" parent="TextViewStyle">
         <item name="android:textAlignment">center</item>
         <item name="color">@color/colorBlueBerry</item>
+        <item name="android:fontFamily">@font/nanumsquare</item>
         <item name="android:layout_margin">5dp</item>
     </style>
 
@@ -41,16 +45,21 @@
         <item name="android:padding">5dp</item>
         <item name="android:textAlignment">center</item>
         <item name="color">@color/colorBlueBerry</item>
+        <item name="android:fontFamily">@font/nanumsquare</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:layout_margin">5dp</item>
     </style>
 
     <style name="LayoutStyle" parent="AppTheme">
-
+        <item name="android:fontFamily">@font/nanumsquare</item>
     </style>
 
-    <style name="EditTextStyle" parent="TextViewStyle"></style>
+    <style name="EditTextStyle" parent="TextViewStyle">
+        <item name="android:fontFamily">@font/nanumsquare</item>
+    </style>
 
     <style name="SpinnerStyle" parent="TextViewStyle">
+        <item name="android:fontFamily">@font/nanumsquare</item>
         <item name="android:textSize">13dp</item>
     </style>
 
