BUG FIX: restore double

--- a/Blueberry/app/src/main/res/layout/activity_edit.xml
+++ b/Blueberry/app/src/main/res/layout/activity_edit.xml
@@ -25,8 +25,8 @@
             android:layout_marginStart="5dp"
             android:fontFamily="@font/nanumsquare"
             android:text="@string/recheck2_title"
-            android:textStyle="bold"
-            android:textColor="@color/colorBlueBerry" />
+            android:textColor="@color/colorBlueBerry"
+            android:textStyle="bold" />
 
         <!--        <TextView-->
         <!--            style="@style/TextViewStyle"-->
@@ -63,7 +63,7 @@
             style="@style/ImageViewStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:adjustViewBounds="true"/>
+            android:adjustViewBounds="true" />
 
     </LinearLayout>
 
@@ -94,8 +94,9 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="이름을 선택 한 후 수정하세요"
-            android:textSize="@dimen/recheck1_question1"
+            android:imeOptions="actionNext"
             android:textCursorDrawable="@color/colorBlueBerry"
+            android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -120,8 +121,9 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="휴대전화 번호를 선택하고 수정하세요"
-            android:textSize="@dimen/recheck1_question1"
+            android:imeOptions="actionNext"
             android:textCursorDrawable="@color/colorBlueBerry"
+            android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -146,8 +148,9 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="이메일을 선택하고 수정하세요"
-            android:textSize="@dimen/recheck1_question1"
+            android:imeOptions="actionNext"
             android:textCursorDrawable="@color/colorBlueBerry"
+            android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -172,8 +175,9 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="홈페이지 주소를 선택하고 수정하세요"
-            android:textSize="@dimen/recheck1_question1"
+            android:imeOptions="actionNext"
             android:textCursorDrawable="@color/colorBlueBerry"
+            android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -198,8 +202,9 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="회사 이름을 선택하고 수정하세요"
-            android:textSize="@dimen/recheck1_question1"
+            android:imeOptions="actionNext"
             android:textCursorDrawable="@color/colorBlueBerry"
+            android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -224,8 +229,9 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="주소를 선택하고 수정하세요"
-            android:textSize="@dimen/recheck1_question1"
+            android:imeOptions="actionNext"
             android:textCursorDrawable="@color/colorBlueBerry"
+            android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -250,8 +256,9 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="그룹을 선택하세요"
-            android:textSize="@dimen/recheck1_question1"
+            android:imeOptions="actionNext"
             android:textCursorDrawable="@color/colorWhite"
+            android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
